framec/tests/snapshots/php_snapshots__state_args.snap
---
source: framec/tests/php_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"php\")"
---
<?php

class StateArgsFrameEvent {
    public $_message;
    public $_parameters;

    public function __construct($message, $parameters = null) {
        $this->_message = $message;
        $this->_parameters = $parameters ?? [];
    }
}


class StateArgsFrameContext {
    public $_event;
    public $_return;
    public $_data;
    public $_transitioned;

    public function __construct($event, $defaultReturn = null) {
        $this->_event = $event;
        $this->_return = $defaultReturn;
        $this->_data = [];
        $this->_transitioned = false;
    }
}


class StateArgsCompartment {
    public $state;
    public $state_args;
    public $state_vars;
    public $enter_args;
    public $exit_args;
    public $forward_event;
    public $parent_compartment;

    public function __construct($state, $parent_compartment = null) {
        $this->state = $state;
        $this->state_args = [];
        $this->state_vars = [];
        $this->enter_args = [];
        $this->exit_args = [];
        $this->forward_event = null;
        $this->parent_compartment = $parent_compartment;
    }

    public function copy() {
        $c = new StateArgsCompartment($this->state, $this->parent_compartment);
        $c->state_args = $this->state_args;
        $c->state_vars = $this->state_vars;
        $c->enter_args = $this->enter_args;
        $c->exit_args = $this->exit_args;
        $c->forward_event = $this->forward_event;
        return $c;
    }
}


class StateArgs {
    private $_state_stack;
    private $__compartment;
    private $__next_compartment;
    private $_context_stack;

    public function __construct() {
        $this->_state_stack = [];
        $this->_context_stack = [];
        $this->__compartment = $this->__prepareEnter("Idle", [], []);
        $this->__next_compartment = null;
    }

    public function _frame_init(): void {
        $__e = new StateArgsFrameEvent("$>", $this->__compartment->enter_args);
        $__ctx = new StateArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        $this->__kernel($__e);
        array_pop($this->_context_stack);
    }

    public static function _create(): self {
        $c = new self();
        $c->_frame_init();
        return $c;
    }

    public function hsm_chain() {
        return [
            "Idle" => ["Idle"],
            "Holding" => ["Holding"],
        ];
    }
    private function __prepareEnter($leaf, $state_args, $enter_args) {
        $comp = null;
        foreach ($this->hsm_chain()[$leaf] as $name) {
            $new_comp = new StateArgsCompartment($name);
            $new_comp->state_args = $state_args;
            $new_comp->enter_args = $enter_args;
            $new_comp->parent_compartment = $comp;
            $comp = $new_comp;
        }
        return $comp;
    }

    private function __prepareExit($exit_args) {
        $comp = $this->__compartment;
        while ($comp !== null) {
            $comp->exit_args = $exit_args;
            $comp = $comp->parent_compartment;
        }
    }

    private function __kernel($__e) {
        // Route event to current state.
        $this->__router($__e);
        // Drain any transitions queued by the handler.
        while ($this->__next_compartment !== null) {
            $next_compartment = $this->__next_compartment;
            $this->__next_compartment = null;
            $exit_event = new StateArgsFrameEvent("<$", $this->__compartment->exit_args);
            $this->__router($exit_event);
            $this->__compartment = $next_compartment;
            $forward_event = $next_compartment->forward_event;
            $next_compartment->forward_event = null;
            if ($forward_event === null) {
                $enter_event = new StateArgsFrameEvent("$>", $this->__compartment->enter_args);
                $this->__router($enter_event);
            } else if ($forward_event->_message === "$>") {
                $this->__router($forward_event);
            } else {
                $enter_event = new StateArgsFrameEvent("$>", $this->__compartment->enter_args);
                $this->__router($enter_event);
                $this->__router($forward_event);
            }
            foreach ($this->_context_stack as $ctx) {
                $ctx->_transitioned = true;
            }
        }
    }

    private function __router($__e) {
        $handler_name = "_state_" . $this->__compartment->state;
        if (method_exists($this, $handler_name)) {
            $this->$handler_name($__e, $this->__compartment);
        }
    }

    private function __transition($next_compartment) {
        $this->__next_compartment = $next_compartment;
    }

    public function load($initial) {
        $__e = new StateArgsFrameEvent("load", [$initial]);
        $__ctx = new StateArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        $this->__kernel($__e);
        return array_pop($this->_context_stack)->_return;
    }

    public function adjust($delta) {
        $__e = new StateArgsFrameEvent("adjust", [$delta]);
        $__ctx = new StateArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        $this->__kernel($__e);
        return array_pop($this->_context_stack)->_return;
    }

    public function peek() {
        $__e = new StateArgsFrameEvent("peek", []);
        $__ctx = new StateArgsFrameContext($__e, null);
        $this->_context_stack[] = $__ctx;
        $this->__kernel($__e);
        return array_pop($this->_context_stack)->_return;
    }

    private function _state_Idle($__e, $compartment) {
        if ($__e->_message == "load") {
            $this->_s_Idle_hdl_user_load($__e, $compartment);
            return;
        }
    }

    private function _state_Holding($__e, $compartment) {
        $value = $this->__compartment->state_args[0];
        if ($__e->_message == "adjust") {
            $this->_s_Holding_hdl_user_adjust($__e, $compartment);
            return;
        }
        if ($__e->_message == "peek") {
            $this->_s_Holding_hdl_user_peek($__e, $compartment);
            return;
        }
    }

    private function _s_Idle_hdl_user_load($__e, $compartment) {
        $initial = $__e->_parameters[0];
        $__compartment = $this->__prepareEnter("Holding", [$initial], []);
        $this->__transition($__compartment);
        return;
    }

    private function _s_Holding_hdl_user_adjust($__e, $compartment) {
        $value = $compartment->state_args[0];
        $delta = $__e->_parameters[0];
        $__compartment = $this->__prepareEnter("Holding", [value + $delta], []);
        $this->__transition($__compartment);
        return;
    }

    private function _s_Holding_hdl_user_peek($__e, $compartment) {
        $value = $compartment->state_args[0];
        $this->_context_stack[count($this->_context_stack) - 1]->_return = value;
    }
}
